--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
       <div class="skill-row">
         <img class="code-img" src="images/coding.jpg" alt="code-img">
 
-        <h3>Programming and Problem Solving</h3>
-        <p>I am very fond of doing logical stuffs and solving logical problems from my childhood. That's why I also love to solve puzzles and logical problem usig programming. They challange my logical ability and I enjoy it.</p></p>
+        <h3>Data Structures and Problem Solving</h3>
+        <p>I am very fond of doing logical stuffs and solving logical problems. That's why I also love to solve puzzles and logical problem usig programming. They challange my logical ability and I enjoy it.</p></p>
 
+      </div>
+      <div class="skill-row">
+        <img class="code-img" src="images/coding.jpg" alt="code-img">
+
+        <h3>Web Development</h3>
+        <p>I am a creative web designer and developer, who aims to work with small businesses and marginalized communities to bring their passions to life. </p>
       </div>
     <hr>
     <div class="contact-me">
