--- a/index.html
+++ b/index.html
@@ -24,23 +24,22 @@
     <div class="profile">
       <img id="adarshImage" src="images/adarsh.jpg" alt="adarsh-profile-img">
       <h2>Hello.</h2>
-      <p class="intro">I love anything that challanges my logical thinking skills. That's why I many brain games like sudoku, rubics cube and Brainvita. Also I love to solve programming problems.</p>
+      <p class="intro">I love anything that challanges my logical thinking skills or/ans is creative. That's why I love to solve programming problems and Desiging and Developing websites.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills</h2>
       <div class="skill-row">
         <img class="code-img" src="images/coding.jpg" alt="code-img">
-
         <h3>Data Structures and Problem Solving</h3>
-        <p>I am very fond of doing logical stuffs and solving logical problems. That's why I also love to solve puzzles and logical problem usig programming. They challange my logical ability and I enjoy it.</p></p>
-
+        <p>I am very fond of doing logical stuffs and solving logical problems. That's why I also love to solve Data Structures related problems. They challange my logical ability and I enjoy it.</p>
+        <a href="https://auth.geeksforgeeks.org/user/adarshsharadpandey23/practice/"> GeeksForGeeks Profile </a>
       </div>
       <div class="skill-row">
         <img class="code-img" src="images/coding.jpg" alt="code-img">
-
         <h3>Web Development</h3>
-        <p>I am a creative web designer and developer, who aims to work with small businesses and marginalized communities to bring their passions to life. </p>
+        <p>I am a creative web designer and developer. I love designing and developing webpages as it let me show my creativity using code.</p>
+        <a href="https://github.com/AdarshSharadPandey"> Github Profile </a>
       </div>
     <hr>
     <div class="contact-me">
