--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="skill-row">
         <img class="code-img" src="images/coding.jpg" alt="code-img">
         <h3>Data Structures and Problem Solving</h3>
-        <p>I am very fond of doing logical stuffs and solving logical problems. That's why I also love to solve Data Structures related problems. They challange my logical ability and I enjoy it.</p>
+        <p>I am very fond of doing logical stuffs and solving logical problems. That's why I also love to solve Data Structures related problems</p>
         <a href="https://auth.geeksforgeeks.org/user/adarshsharadpandey23/practice/"> GeeksForGeeks Profile </a>
       </div>
       <div class="skill-row">
